KubeHandsOn/backend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-pod
  labels:
    app: backend
spec:
  containers:
    - name: backend
      image: people-api:1.0.0
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8080
