KubeHandsOn/multi-container-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend-nginx-pod
spec:
  containers:
  - name: backend
    image: people-api:1.0.0
    ports:
      - containerPort: 8080
  - name: nginx
    image: nginx:alpine
    ports:
      - containerPort: 80
